# fuzzy-computing-machine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
app/: exceptions.py  main.py  utils.py  worker.py
app/configs/: database.py  settings.py
app/models/: audio_data.py  base.py  questions.py  users.py
app/repositories/: audio_data_repository.py  base.py  question_repository.py  user_repository.py
app/routers/: audio_router.py  question_router.py  user_router.py
app/schemas/: audio_schema.py  base.py  question_schema.py  user_schema.py
app/services/: audio_service.py  question_service.py  user_service.py
app/tasks/: question_task.py
migrations/: env.py
migrations/versions/: 1555ba2379ab_add_user_table.py  4551e78c441f_add_audio_data.py  514e243b984a_create_question_table.py
scripts/: makemigrations  run_server  start_api.sh
